// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SortingItem render correctly SortingItem active 1`] = `
<li
  className="places__option places__option--active"
  data-sorting="Popular"
  onClick={[Function]}
  tabIndex="0"
>
  Popular
</li>
`;

exports[`SortingItem render correctly SortingItem not active 1`] = `
<li
  className="places__option "
  data-sorting="Popular"
  onClick={[Function]}
  tabIndex="0"
>
  Popular
</li>
`;
